// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Celecoxib Integration Test parses celecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "N",
        "5": "N",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "F",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Celecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('C');
export const v2 = Fragment('C1=CC=CC=C1');
export const v3 = Fragment('C2=CC=CC2');
export const v4 = Fragment('C2=CC=NN2');
export const v5 = Fragment('CF');
export const v6 = Fragment('F');
export const v7 = v5.attach(1, v6);
export const v8 = Fragment('F');
export const v9 = v7.attach(1, v8);
export const v10 = Molecule([v1, v2, v4, v9]);"
`;

exports[`Celecoxib Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, '=', null, null] });
export const v4 = v3.substitute(4, 'N');
export const v5 = v4.substitute(5, 'N');
export const v6 = Linear(['C', 'F']);
export const v7 = Linear(['F']);
export const v8 = v6.attach(1, v7);
export const v9 = Linear(['F']);
export const v10 = v8.attach(1, v9);
export const v11 = Molecule([v1, v2, v5, v10]);"
`;

exports[`Meloxicam Integration Test parses meloxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "3": "N",
        "5": "S",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Meloxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('C');
export const v2 = Fragment('C1=CC=CC1');
export const v3 = Fragment('C1=CN=CS1');
export const v4 = Fragment('C');
export const v5 = Molecule([v1, v3, v4]);"
`;

exports[`Meloxicam Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(3, 'N');
export const v4 = v3.substitute(5, 'S');
export const v5 = Linear(['C']);
export const v6 = Molecule([v1, v4, v5]);"
`;

exports[`Piroxicam Integration Test parses piroxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 11,
      "substitutions": {
        "1": "N",
        "10": "S",
        "11": "O",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {
        "6": "N",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Piroxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('C');
export const v2 = Fragment('C1C=CC=CC=CC=CC=C1');
export const v3 = Fragment('N1C=CC=CC=CC=CS=O1');
export const v4 = Fragment('CN');
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(1, v5);
export const v7 = Fragment('C3=CC=CC=C3');
export const v8 = Fragment('C3=CC=CC=N3');
export const v9 = Molecule([v1, v3, v6, v8]);"
`;

exports[`Piroxicam Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, '=', null, '=', null, '=', null, '=', null] });
export const v3 = v2.substitute(1, 'N');
export const v4 = v3.substitute(10, 'S');
export const v5 = v4.substitute(11, 'O');
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(1, v7);
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v10 = v9.substitute(6, 'N');
export const v11 = Molecule([v1, v5, v8, v10]);"
`;

exports[`Etodolac Integration Test parses etodolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "3": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etodolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('CC');
export const v2 = Fragment('C1=CC=C(C=C1)');
export const v3 = Fragment('C2=CCC=C2');
export const v4 = Fragment('C2=CNC=C2');
export const v5 = Fragment('C3=CCCCC3');
export const v6 = Fragment('C3=CCCOC3');
export const v7 = Fragment('CC');
export const v8 = v6.attach(6, v7);
export const v9 = Linear(['O'], ['=']);
export const v10 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 7, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 6, depth: 1, value: 'C', rings: [1], branchId: 10 }, { position: 7, depth: 1, value: 'C', bond: '=', rings: [1], branchId: 10 }] }, { ring: v4, start: 4, end: 14, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 12, depth: 0, value: 'N', rings: [2] }, { position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }] }, { ring: v8, start: 13, end: 18, atoms: [{ position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }, { position: 15, depth: 0, value: 'C', rings: [3] }, { position: 16, depth: 0, value: 'C', rings: [3] }, { position: 17, depth: 0, value: 'O', rings: [3] }, { position: 18, depth: 0, value: 'C', rings: [3] }] }], atoms: [{ position: 8, depth: 1, value: 'C', branchId: 10 }, { position: 9, depth: 1, value: 'C', branchId: 10, attachments: [v9] }, { position: 11, depth: 1, value: 'O', branchId: 10 }] } });
export const v11 = Fragment('CC');
export const v12 = Molecule([v1, v10, v11]);"
`;

exports[`Etodolac Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v3 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2, bonds: ['=', null, null, '=', null] });
export const v4 = v3.substitute(3, 'N');
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, null, null, null, null] });
export const v6 = v5.substitute(5, 'O');
export const v7 = Linear(['C', 'C']);
export const v8 = v6.attach(6, v7);
export const v9 = Linear(['O'], ['=']);
export const v10 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 7, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 6, depth: 1, value: 'C', rings: [1], branchId: 10 }, { position: 7, depth: 1, value: 'C', bond: '=', rings: [1], branchId: 10 }] }, { ring: v4, start: 4, end: 14, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 12, depth: 0, value: 'N', rings: [2] }, { position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }] }, { ring: v8, start: 13, end: 18, atoms: [{ position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }, { position: 15, depth: 0, value: 'C', rings: [3] }, { position: 16, depth: 0, value: 'C', rings: [3] }, { position: 17, depth: 0, value: 'O', rings: [3] }, { position: 18, depth: 0, value: 'C', rings: [3] }] }], atoms: [{ position: 8, depth: 1, value: 'C', branchId: 10 }, { position: 9, depth: 1, value: 'C', branchId: 10, attachments: [v9] }, { position: 11, depth: 1, value: 'O', branchId: 10 }] } });
export const v11 = Linear(['C', 'C']);
export const v12 = Molecule([v1, v10, v11]);"
`;

exports[`Ketorolac Integration Test parses ketorolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "4": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ketorolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('OC');
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Fragment('C1CCCC1');
export const v5 = Fragment('C1CCNC1');
export const v6 = Fragment('C2C=CC=C2');
export const v7 = v5.fuse(3, v6);
export const v8 = Fragment('C');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(1, v9);
export const v11 = Fragment('C3=CC=CC=C3');
export const v12 = Molecule([v3, v7, v10, v11]);"
`;

exports[`Ketorolac Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 5 });
export const v5 = v4.substitute(4, 'N');
export const v6 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 3, bonds: [null, '=', null, '=', null] });
export const v7 = v5.fuse(3, v6);
export const v8 = Linear(['C']);
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(1, v9);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Molecule([v3, v7, v10, v11]);"
`;

exports[`Rofecoxib Integration Test parses rofecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "S",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Rofecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('CS');
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(2, v4);
export const v6 = Fragment('C1=CC=CC=C1');
export const v7 = Fragment('C2=CCCC2');
export const v8 = Fragment('C2=CCOC2');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(3, v9);
export const v11 = Fragment('C3=CC=CC=C3');
export const v12 = Molecule([v5, v6, v10, v11]);"
`;

exports[`Rofecoxib Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C', 'S']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(2, v4);
export const v6 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, null, null, null] });
export const v8 = v7.substitute(4, 'O');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(3, v9);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Molecule([v5, v6, v10, v11]);"
`;

exports[`Etoricoxib Integration Test parses etoricoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {
        "2": "N",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "S",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etoricoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('C');
export const v2 = Fragment('C1=CC=CC=C1');
export const v3 = Fragment('C1=NC=CC=C1');
export const v4 = Fragment('C2=CC=CC=C2');
export const v5 = Fragment('S');
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(1, v8);
export const v10 = Fragment('C3=CC=CC=C3');
export const v11 = Molecule([v1, v3, v4, v9, v10]);"
`;

exports[`Etoricoxib Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v5 = Linear(['S']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(1, v8);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v11 = Molecule([v1, v3, v4, v9, v10]);"
`;

exports[`Nabumetone Integration Test parses nabumetone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabumetone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('CO');
export const v2 = Fragment('C1=CC(=CC=C1)');
export const v3 = Fragment('C2=CC(CC=C2)');
export const v4 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 11, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1], branchId: 11 }, { position: 10, depth: 1, value: 'C', rings: [1], branchId: 11 }, { position: 11, depth: 1, value: 'C', bond: '=', rings: [1], branchId: 11 }] }, { ring: v3, start: 4, end: 9, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [2] }, { position: 6, depth: 0, value: 'C', rings: [2] }, { position: 7, depth: 1, value: 'C', rings: [2], branchId: 11 }, { position: 8, depth: 1, value: 'C', rings: [2], branchId: 11 }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1], branchId: 11 }] }] } });
export const v5 = Fragment('CCCC');
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(3, v6);
export const v8 = Molecule([v1, v4, v7]);"
`;

exports[`Nabumetone Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2, bonds: ['=', null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v4 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 11, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1], branchId: 11 }, { position: 10, depth: 1, value: 'C', rings: [1], branchId: 11 }, { position: 11, depth: 1, value: 'C', bond: '=', rings: [1], branchId: 11 }] }, { ring: v3, start: 4, end: 9, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [2] }, { position: 6, depth: 0, value: 'C', rings: [2] }, { position: 7, depth: 1, value: 'C', rings: [2], branchId: 11 }, { position: 8, depth: 1, value: 'C', rings: [2], branchId: 11 }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1], branchId: 11 }] }] } });
export const v5 = Linear(['C', 'C', 'C', 'C']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(3, v6);
export const v8 = Molecule([v1, v4, v7]);"
`;

exports[`Oxaprozin Integration Test parses oxaprozin 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "2": "N",
        "5": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Oxaprozin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Fragment('OCCC');
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Fragment('C1=CC=CC1');
export const v5 = Fragment('C1=NC=CO1');
export const v6 = Fragment('C3=CC=CC=C3');
export const v7 = Molecule([v3, v5, v6]);"
`;

exports[`Oxaprozin Integration Test generates valid verbose code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v5 = v4.substitute(2, 'N');
export const v6 = v5.substitute(5, 'O');
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v8 = Molecule([v3, v6, v7]);"
`;
